--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,20 @@ ul {
         transform: translateY(0px);
     }
 }
+
+/* Navbar three */
+
+.three:hover .dropdown li {
+    animation: menu3 .5s forwards;
+}
+
+@keyframes menu3 {
+    from {
+        opacity: 0;
+        transform: rotateY(-60deg) translateX(60px);
+    }
+    to {
+        opacity: 1;
+        transform: rotateY(0)  translateX(0px);
+    }
+}
