--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ ul {
         opacity: 0;
         transform: translateY(60px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0px);
@@ -119,8 +120,28 @@ ul {
         opacity: 0;
         transform: rotateY(-60deg) translateX(60px);
     }
+
     to {
         opacity: 1;
-        transform: rotateY(0)  translateX(0px);
+        transform: rotateY(0) translateX(0px);
+    }
+}
+
+/* Navbar four */
+
+.four:hover .dropdown li {
+    animation: menu4 .5s forwards;
+    transform-origin: top;
+}
+
+@keyframes menu4 {
+    from {
+        opacity: 0;
+        transform: scale(.8) translateY(-40px);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1) translateY(0px);
     }
 }
